@@ -1,3 +1,4 @@
+* Support negative amount
 * Add support to Python 3.10, 3.11, 3.12
 
 Version 0.6.0 - 2021-09-18
